<resources>
    <string name="app_name">Baccus</string>
    <string name="change_model">Cambiar</string>
    <string name="wine_image">Imagen del vino</string>
    <string name="reload">Recargar</string>
    <string name="choose_an_option">Elige una opción:</string>
    <string name="fit">Ajustada</string>
    <string name="center">Centrada</string>
    <string name="cancel">Cancelar</string>
    <string name="save">Guardar</string>
    <string name="settings">Ajustes</string>
    <string name="next">Siguiente</string>
    <string name="prev">Anterior</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loading">Cargando...</string>
</resources>
