<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <TextView
        android:id="@+id/choose_option_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_an_option"
        android:layout_alignParentLeft="true"/>

    <RadioGroup
        android:id="@+id/scale_type_radios"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/choose_option_text">

        <RadioButton
            android:id="@+id/fit_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fit"/>
        <RadioButton
            android:id="@+id/center_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/center"/>
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_weight="1"/>
    </LinearLayout>

</RelativeLayout>